force-app/main/default/objects/ProdNameForDoc__c/ProdNameForDoc__c.object-meta.xml
<CustomObject>
    <label>Prod Name For Doc</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Autoname</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prod Names For Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>