force-app/main/default/objects/ProdNameForDoc__c/fields/Classifier__c.field-meta.xml
<CustomField>
    <fullName>Classifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products Classifier</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Prod Names For Docs</relationshipLabel>
    <relationshipName>Prod_Names_For_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>