force-app/main/default/objects/ProdNameForDoc__c/fields/DateBegin__c.field-meta.xml
<CustomField>
    <fullName>DateBegin__c</fullName>
    <label>DateBegin</label>
    <type>Date</type>
</CustomField>