force-app/main/default/objects/ProdNameForDoc__c/fields/NameRU__c.field-meta.xml
<CustomField>
    <fullName>NameRU__c</fullName>
    <label>NameRU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>