force-app/main/default/objects/ProdNameForDoc__c/fields/NameUA__c.field-meta.xml
<CustomField>
    <fullName>NameUA__c</fullName>
    <label>NameUA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>