force-app/main/default/objects/ProdNameForDoc__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Prod Names For Docs</relationshipLabel>
    <relationshipName>Prod_Names_For_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>