force-app/main/default/objects/ProdNameForDoc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID__c</columns>
    <columns>NameEN__c</columns>
    <columns>NameUA__c</columns>
    <columns>NameRU__c</columns>
    <columns>IsActive__c</columns>
    <columns>Classifier__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>